--- a/gemfiles/rails_60_webpacker/Gemfile
+++ b/gemfiles/rails_60_webpacker/Gemfile
@@ -31,7 +31,7 @@ group :test do
   gem 'db-query-matchers', '0.10.0'
 
   gem 'simplecov', '0.17.1', require: false # Test coverage generator. Go to /coverage/ after running tests
-  gem 'cucumber-rails', '~> 2.0', require: false
+  gem 'cucumber-rails', '~> 2.0', github: 'cucumber/cucumber-rails', ref: '8c22f3733e7d1b04142392d757ef70d4814c310d', require: false
   gem 'cucumber'
   gem 'database_cleaner'
   gem 'jasmine'
