--- a/gemfiles/rails_52/Gemfile
+++ b/gemfiles/rails_52/Gemfile
@@ -12,7 +12,7 @@ group :development, :test do
   gem 'jruby-openssl', '~> 0.10.1', platform: :jruby
 
   gem 'draper', '~> 4.0'
-  gem "devise", github: "heartcombo/devise", ref: "70f3ae24e00906814b63fe1998c861ca45fbecf6"
+  gem "devise", github: "VitaliiLazebnyi/devise", branch: "deprecated_warning_ruby_27", ref: "b426738b4c7e441199acf6d7571e78d9cfe9c8b2"
 
   gem "rails", "~> 5.2.3"
   gem "activerecord-jdbcsqlite3-adapter", "~> 52.0", platform: :jruby
